# hatsuon-app

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  package-lock.json  pyproject.toml
hatsuon/: Dockerfile  compose.yaml  requirements.txt  settings.py  urls.py  wsgi.py
hatsuon/frontend/: Dockerfile  compose.yaml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
hatsuon/frontend/src/: .prettierrc  App.svelte  app.css
hatsuon/hatsuon/: asgi.py  settings.py  urls.py  wsgi.py
hatsuon/hatsuon_app/: models.py  serializers.py  urls.py  views.py
hatsuon/hatsuon_app/migrations/: 0001_initial.py  0003_collection_phrases_alter_phrase_recording.py  0004_alter_collection_description_and_more.py  0007_remove_collection_phrases_phrase_collection.py
hatsuon/hatsuon_app/templatetags/: render_svelte.py
hatsuon/nginx/: default.conf
hatsuon/svelte-kit/: .prettierrc  package-lock.json  package.json  tailwind.config.js  vite.config.ts
hatsuon/svelte-kit/src/: app.css
hatsuon_app/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
hatsuon_app/migrations/: 0002_alter_collection_created_by_phrase.py  0005_remove_collection_phrases_phrase_collection.py  0006_remove_phrase_collection_collection_phrases.py  0008_take.py  0009_take_title.py
nginx/: default.conf
svelte-kit/: Dockerfile  biome.json  compose.yaml  package-lock.json  package.json  svelte.config.js
svelte-kit/src/: decs.d.ts
svelte-kit/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  +page.ts  CollectionList.svelte  data.ts  (+1 more)
(+103 files in other folders)
