[tool.poetry]
name = "hatsuon-app"
version = "0.1.0"
description = ""
authors = ["sakiadachi <sakiadachi.88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.8.1"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
defusedxml = "0.7.1"
dj-database-url = "2.1.0"
dj-rest-auth = {extras = ["with-social"], version = "^6.0.0"}
Django = "5.0.8"
django-cors-headers = "4.3.1"
django-rest-authtoken = "2.1.4"
djangorestframework = "3.15.2"
drf-nested-routers = "0.93.5"
drf-writable-nested = "0.7.0"
gunicorn = "22.0.0"
idna = "3.7"
iniconfig = "2.0.0"
markdown-it-py = "3.0.0"
mdurl = "0.1.2"
multidict = "6.0.5"
packaging = "24.0"
pluggy = "1.4.0"
psycopg = "3.1.19"
psycopg2-binary = "2.9.9"
Pygments = "2.17.2"
PySocks = "1.7.1"
pytest = "8.1.1"
python-dotenv = "1.0.1"
rich = "13.7.1"
setuptools = "70.0.0"
sqlparse = "0.5.0"
typing_extensions = "4.11.0"
urllib3 = "2.2.1"
whitenoise = "6.6.0"
django-cleanup = "^8.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
